--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,8 @@ owner:
   avatar: avt.jpg
   # bio: Two roads diverged in woods, I took the one less traveled by.
   email: 1275244661@qq.com
-  twitter: xu_crane
+  bilibili: 355348366
+  # twitter: xu_cranger
   # cv: https://caihanlin.com/file/CV-HanlinCAI.pdf
   # Social networking links are used in author-bio sidebar. Update and remove as you like.
   github: xucranger
