--- a/_config.yml
+++ b/_config.yml
@@ -37,6 +37,8 @@ links:
     url: /
   - title: Blogs
     url: /blogs/
+  - title: Diary
+    url: /diary/
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 timezone: China/Beijing
